kube/python-api-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: python-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-api
  template:
    metadata:
      labels:
        app: python-api
    spec:
      containers:
      - name: python-flask
        image: firemanxbr/python-flask:latest
        ports:
        - containerPort: 80
