kube/python-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.example.com
    http:
      paths:
      - backend:
          serviceName: python-api
          servicePort: 80
